--- a/views/partials/flash.handlebars
+++ b/views/partials/flash.handlebars
@@ -1,5 +1,7 @@
+<div class="flash-message">
 {{#if flash }}
     <div class="alert alert-{{flash.type}}">
         {{flash.message}}
     </div>
 {{/if}}
+</div>
