working login with out authentication

--- a/views/login/createlogin.handlebars
+++ b/views/login/createlogin.handlebars
@@ -1,13 +1,11 @@
 <div class="container">
     <div class="text-center">
         <h1 class="display-3">Create your login!</h1>
-        <form class="create-login" method="post" action="/login/">
-            <input type="text" name="username-create" value="" placeholder="username"><br>
+        <form class="create-login" method="post" action="/register">
+            <input type="text" name="username" value="" placeholder="username"><br>
             <input type="text" name="name" value="" placeholder="name"><br>
-            <input type="text" name="email" value="" placeholder="e-mail"><br>
-            <input type="text" name="v-email" value="" placeholder="verify e-mail"><br>
-            <input type="password" name="password-login" value="" placeholder="new password"><br>
-            <input type="password" name="v-password-login" value="" placeholder="verify new password"><br>
+            <input type="email" name="email" value="" placeholder="email"><br>
+            <input type="password" name="password" value="" placeholder="new password"><br>
             <button class="waves-effect waves-teal btn-flat">Create login</button>
         </form>
     </div>
