--- a/views/main/snippets.handlebars
+++ b/views/main/snippets.handlebars
@@ -1,33 +1,24 @@
-
-        {{#if snippets }}
-                <div class="row">
-                {{#each snippets}}
-                    <div class="col s12 m6">
-                        <div class="card blue-grey brown lighten-3, z-depth-5">
-                            <div class="card-content white-text">
-                                <span class="card-title">{{this.name}}</span>
-                                <form class="update-ta" action="/update/{{id}}" method="post">
-                                    <textarea name="snippet" class="show-snippet">{{this.snippet}}</textarea>
-                                    <button class="waves-effect waves-teal btn-flat" type="submit">UPDATE</button>
-                                </form>
-                                <form class="delete-button" action="/delete/{{id}}" method="post">
-                                    <button class="waves-effect waves-teal btn-flat" type="submit" name="name">DELETE</button>
-                                </form>
-                            </div>
-                        </div>
+{{#if snippets }}
+    <div class="row">
+        {{#each snippets}}
+            <div class="col s12 m6">
+                <div class="card blue-grey brown lighten-3, z-depth-5">
+                    <div class="card-content white-text">
+                        <span class="card-title">{{this.name}}</span>
+                        <form class="update-ta" action="/update/{{id}}" method="post">
+                            <textarea name="snippet" class="show-snippet">{{this.snippet}}</textarea>
+                            <button class="waves-effect waves-teal btn-flat" type="submit">UPDATE</button>
+                        </form>
+                        <form class="delete-button" action="/delete/{{id}}" method="post">
+                            <button class="waves-effect waves-teal btn-flat" type="submit" name="name">DELETE</button>
+                        </form>
+                        created by {{this.username}}
                     </div>
-                {{/each}}
+                    <p>
                 </div>
-        {{/if}}
-
-        <ul class="pagination">
-            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active"><a href="#!">1</a></li>
-            <li class="waves-effect"><a href="#!">2</a></li>
-            <li class="waves-effect"><a href="#!">3</a></li>
-            <li class="waves-effect"><a href="#!">4</a></li>
-            <li class="waves-effect"><a href="#!">5</a></li>
-            <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-        </ul>
+            </div>
+        {{/each}}
+    </div>
+{{/if}}
 
 
