bug fixes and comments

--- a/views/partials/flash.handlebars
+++ b/views/partials/flash.handlebars
@@ -1,6 +1,6 @@
 <div class="flash-message">
 {{#if flash }}
-    <div class="{{flash.type}} text-center" id="flash">
+    <div class="alert alert-{{flash.type}} text-center" id="flash">
         <i class="material-icons">info_outline</i>{{flash.intro}} {{flash.message}}
     </div>
 {{/if}}
