--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,4 @@
-
-<hr />
-<footer>
+<footer class="footer">
     <p><a rel="license" href="//creativecommons.org/licenses/by/4.0/">
         <img alt="Creative Commons License" style="border-width:0"
              src="//i.creativecommons.org/l/by/4.0/80x15.png" /></a>
