--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,7 +1,12 @@
+html {
+    height: 100%;
+}
+
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
 }
 
 .logo{
@@ -39,11 +44,6 @@ body {
 
 }
 
-#flash{
-    margin-top: 1%;
-    margin-left: 40%;
-}
-
 .row{
     margin:15%;
     margin-top: 5%;
@@ -71,4 +71,13 @@ body {
 
 code{
     height: 10%;
+}
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
 }
